<resources>
    <string name="app_name">Superpower Ability</string>
    <string name="ready">READY?</string>
    <string name="go">GO!</string>
    <string name="i_want_to_be_anonymous"><u>I want to be anonymous</u></string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="game_1">Game 1</string>
    <string name="game_2">Game 2</string>
    <string name="settings">Settings</string>
    <string name="bonus_game">Bonus game</string>
    <string name="privacy"><u>Privacy</u></string>
    <string name="exit"><u>Exit</u></string>
    <string name="reset_score"><u>Reset score</u></string>
    <string name="balance">Balance</string>
    <string name="win">Win</string>
    <string name="play">Play</string>
    <string name="enter_email">Enter email</string>
    <string name="score_resettled">Score resettled</string>
</resources>