<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_game_1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/game_1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bt_game_2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_game_2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/game_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bt_game_3"
        app:layout_constraintTop_toBottomOf="@id/bt_game_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_game_3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/bonus_game"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/bt_settings"
        app:layout_constraintTop_toBottomOf="@id/bt_game_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_settings"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/tv_privacy"
        app:layout_constraintTop_toBottomOf="@id/bt_game_3"
        tools:layout_editor_absoluteX="40dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:soundEffectsEnabled="true"
        android:text="@string/privacy"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_exit"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:soundEffectsEnabled="true"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_privacy" />
</androidx.constraintlayout.widget.ConstraintLayout>