<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="4dp"
        app:boxBackgroundMode="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_email"
        android:textColorHint="@color/white_60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_text"
            android:fontFamily="@font/montserrat_700"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_go"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:text="@string/go"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/container_mail"
        tools:layout_editor_absoluteX="40dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_want_anon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_700"
        android:gravity="center"
        android:soundEffectsEnabled="true"
        android:text="@string/i_want_to_be_anonymous"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>